Add CIELAB color comparison

--- a/addons/pixel_perfect/plugin.cfg
+++ b/addons/pixel_perfect/plugin.cfg
@@ -3,5 +3,5 @@
 name="PixelPerfect"
 description="Plugin for enforcing a pixel perfect grid scaling, with integer upscaling, resizing of pixel window on desktop window resize, \"black bar\" outlines, palette enforcement, and more!"
 author="felixrl"
-version="0.1"
-script="pixel_perfect.gd"
+version="0.2"
+script="plugin.gd"
